Prevented text in suggest-box's input from overlapping with its icon

--- a/themes/base/main.less
+++ b/themes/base/main.less
@@ -279,6 +279,7 @@ html {
 }
 .__suggestBox input[type="text"] {
   cursor: default;
+  padding-right: 25px;
 }
 .__suggestBox input[type="text"]:focus {
   cursor: auto;
